# cuda-packages

./: .gitignore  README.md  build-hydraJobs.bash  build-hydraJobs.sh  flake.nix  hydraJobs.nix  mkOverlay.nix  overlay.nix
cuda-lib/: data.nix  default.nix  types.nix  utils.nix
cuda-packages/11/: README.md
cuda-packages/11-jetson/: README.md  cudnn.nix  tensorrt.nix
cuda-packages/11-jetson/deb-builder/: default.nix
cuda-packages/11-jetson/onnx-tensorrt/: onnx-8.5-only-dynamic-lib.patch  package.nix
cuda-packages/12.6.2/onnxruntime/: date.nix
cuda-packages/12.6.3/: cutlass.nix  flags.nix  pycuda.nix  redist-builder.nix  tensorrt-oss.nix  tensorrt-python.nix
cuda-packages/12.6.3/autoAddCudaCompatRunpath/: package.nix
cuda-packages/12.6.3/markForCudatoolkitRootHook/: package.nix
cuda-packages/12.6.3/saxpy/: package.nix
cuda-packages/12/onnxruntime/: package.nix
cuda-packages/common/: README.md  backendStdenv.nix  clog.nix  cudaStdenv.nix  cudatoolkit.nix  cudnn-frontend.nix  cutlass.nix  flags.nix  libmathdx.nix  nccl-tests.nix  nccl.nix  nvidia-video-codec-sdk.nix  onnx-tensorrt.nix  onnx.nix  pycuda.nix  redist-builder.nix  tensorrt-oss.nix  tensorrt-python.nix  warp.nix
cuda-packages/common/autoAddCudaCompatRunpath/: auto-add-cuda-compat-runpath.sh  package.nix
cuda-packages/common/autoAddCudaCompatRunpathHook/: auto-add-cuda-compat-runpath-hook.sh  package.nix
cuda-packages/common/cudaHook/: cuda-hook.sh  package.nix
cuda-packages/common/cudaRunpathFixupHook/: cuda-runpath-fixup-hook.sh  package.nix  tests.nix
cuda-packages/wip/: README.md  cuda-samples.nix  cudnn-frontend-python.nix  gdrcopy.nix  nvshmem.nix  tensorrt-oss.nix
cuda-packages/wip/matx/: cccl.nix  (+1 more)
cudaPackages-common/: README.md  backendStdenv.nix  cuda-library-samples.nix  cuda-samples.nix  cudatoolkit.nix  cudnn-frontend.nix  cutlass.nix  flags.nix  nccl-tests.nix  nccl.nix  onnx-tensorrt.nix  onnx.nix  onnxruntime.nix  pycuda.nix  tensorrt-oss.nix  tensorrt-python.nix  writeGpuTestPython.nix
cudaPackages-common/autoAddCudaCompatRunpath/: package.nix
cudaPackages-common/cuda-library-samples/: NPPPlus.nix  cuBLASLt.nix  cuSOLVER.nix  recurseForDerivations.nix  sample-builder.nix
cudaPackages-common/cuda-library-samples/cuTENSOR/: CMakeLists.txt  package.nix
cudaPackages-common/markForCudatoolkitRootHook/: package.nix
cudaPackages-common/onnxruntime/: eigen.nix  flatbuffers.nix  onnxruntime_external_deps.cmake  package.nix  safeint.nix
cudaPackages-common/saxpy/: package.nix
cudaPackages-common/setupCudaHook/: package.nix  setup-cuda-hook.sh
cudaPackages-common/tests/: saxpy.nix
cudaPackages-wip/: cuda-samples.nix  cudnn-frontend-python.nix  gdrcopy.nix  matx.nix  nvbench.nix  nvshmem.nix
cudaPackages-wip/matx/: nvbench.nix  package.nix
cudaPackages_11-jetson/: cudnn.nix  l4t-core.nix  onnx.nix  tensorrt-oss.nix  tensorrt-python.nix  tensorrt.nix
cudaPackages_11-jetson/onnx-tensorrt/: default.nix  package.nix
cudaPackages_12/: README.md
deb-builder/: default.nix
deb-builder/manifests/: 35.6.json  README.md
doc/language-frameworks/: cuda.section.md
jetson-packages/35.6/: README.md  l4t-core.nix  tensorrt-oss.nix
lib/: default.nix
lib/cuda/: data.nix  default.nix  types.nix  utils.nix
lib/upstreamable/: README.md  attrsets.nix  default.nix  strings.nix  trivial.nix  types.nix  versions.nix
modules/: cuda-packages.nix  cudaPackages.nix  default.nix  overlay.nix  package-sets.nix
modules/cuda-lib/: types.nix  utils.nix
modules/data/: cudatoolkit-runfile-releases.nix  default.nix  gpus.nix  nvcc-compatibilities.nix  top-level.nix
modules/redists/: README.md  default.nix
nvidia-redist-json/: README.md
nvidia-redist-json/cublasmp/: redistrib_0.1.0.json  redistrib_0.1.1.json  redistrib_0.2.0.json  redistrib_0.3.0.json  redistrib_0.3.1.json
nvidia-redist-json/cuda/: redistrib_11.5.0.json  redistrib_11.5.1.json  redistrib_11.6.0.json  redistrib_11.7.1.json  redistrib_11.8.0.json  redistrib_12.3.0.json  redistrib_12.6.0.json  redistrib_12.8.0.json
nvidia-redist-json/cudss/: redistrib_0.2.0.json  redistrib_0.4.0.json
nvidia-redist-json/cuquantum/: redistrib_22.03.0.json  redistrib_22.11.0.json  redistrib_23.06.1.json  redistrib_24.11.0.json
nvidia-redist-json/cusolvermp/: redistrib_0.5.0.json
nvidia-redist-json/cutensor/: redistrib_1.3.3.json  redistrib_1.4.0.json  redistrib_1.5.0.json  redistrib_1.6.2.json  redistrib_1.7.0.json  redistrib_2.0.0.json
nvidia-redist-json/nppplus/: redistrib_0.9.0.json
nvidia-redist-json/nvpl/: redistrib_24.7.json  redistrib_25.1.json
nvidia-redist-json/nvtiff/: redistrib_0.3.0.json  redistrib_0.3.1.json  redistrib_0.4.0.json
nvidia-redist-json/tensorrt/: helper.sh  redistrib_10.5.0.json  redistrib_10.6.0.json  redistrib_10.8.0.json
pkgs/top-level/: cuda-packages.nix
python-packages/: onnx-tensorrt.nix  onnx.nix  pycuda.nix  tensorrt-python.nix  warp.nix
python-packages/onnxruntime/: package.nix
redist/: README.md
redist-builder/: default.nix  setup-cuda-stubs-hook.sh
redist/scripts/: README.md
scripts/cuda-redist/: README.md  default.nix  pyproject.toml
upstreamable-lib/: README.md  attrsets.nix  default.nix  strings.nix  types.nix  versions.nix
upstreamable-packages/: mkCheckExpectedRunpath.nix
upstreamable-packages/arrayUtilitiesHook/: array-utilities-hook.sh  package.nix
upstreamable-packages/deduplicateRunpathEntriesHook/: deduplicate-runpath-entries-hook.sh  package.nix
upstreamable-packages/mkCheckExpectedArrayAndMap/: assert-arrays-are-equal.sh  assert-maps-are-equal.sh  package.nix
upstreamable-packages/nixLogWithLevelAndFunctionNameHook/: nix-log-with-level-and-function-name-hook.sh
upstreamable-packages/noBrokenSymlinksHook/: no-broken-symlinks-hook.sh  package.nix
versioned-packages/onnx/: 1.12.nix  1.16.nix  generic.nix
versioned-packages/onnx-tensorrt/: 10.4.nix  8.5.nix  generic.nix
versioned-packages/onnxruntime/: 1.18.nix  1.19.nix  generic.nix  update-re2.patch
(+799 files in other folders)
